# sudoku-rs

./: Cargo.toml  run.sh
src/: main.rs
