[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version="0.29.1", features=["persistence"]}
egui = "0.29.1"
egui_extras = "0.29.1"
rand = "0.8.5"
serde = "1.0.210"
